--- a/app/src/main/res/layout/activity_edit_song.xml
+++ b/app/src/main/res/layout/activity_edit_song.xml
@@ -58,9 +58,28 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
+    <TextView android:text="@string/song_number"
+        android:id="@+id/song_track_text"
+        android:layout_below="@+id/song_album_input"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        style="?android:attr/listSeparatorTextViewStyle" />
+
+    <EditText
+        android:id="@+id/song_track_input"
+        android:inputType="number"
+        android:layout_below="@+id/song_track_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
     <Button
         android:id="@+id/button"
-        android:layout_below="@+id/song_album_input"
+        android:layout_below="@+id/song_track_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/save_changes"
